🐛 fix: fixing summary visibility

--- a/src/assets/css/blocks/home.css
+++ b/src/assets/css/blocks/home.css
@@ -25,8 +25,9 @@
 			}
 
 			& summary {
+				color: var(--link);
 				cursor: pointer;
-				font-weight: revert;
+				font-weight: var(--font-weight-body-bold);
 			}
 
 			&[open] summary {
